# path_tracking

./: .clangd  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CONFIGURATION_SUMMARY.md  HIGH_PRECISION_CONTROL_GUIDE.md  HYBRID_ASTAR_REFACTORING.md  HYBRID_ASTAR_VISUALIZATION_ENHANCEMENT.md  INTERACTIVE_VISUALIZATION_README.md  INTERACTIVE_VISUALIZATION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  SEARCH_TREE_VISUALIZATION_ENHANCEMENT.md  SEGMENTED_RAMP_DOWN_CONTROL.md  debug_stanley.py  demo_interactive_visualization.py  interactive_visualization_demo.py  package-lock.json  pyproject.toml  quick_precision_test.py  test_enhanced_search_visualization.py  test_enhanced_visualization.py  test_high_precision_control.py  test_improved_visualization.py  test_path_comparison.py  test_simulation.py  test_trajectory_visualization.py  test_vehicle_display.py  test_velocity_controller.py  todo.md  自主路径规划.md  自动生成道路图.md
.github/: copilot-instructions.md
.roo/: mcp.json
PathSmoothing/: main.py  pyproject.toml
PathSmoothing/examples/: bspline_smoothing_example.py  gradient_smoother_example.py  method_comparison.py
PathSmoothing/src/path_smoothing/: __init__.py  bspline_smoother.py  cubic_spline_smoother.py  gradient_based_smoother.py
PathSmoothing/src/path_smoothing/examples/: __init__.py  gradient_smoother_example.py  spline_smoothing_example.py
PathTracking/: CONFIGURATION_SUMMARY.md  CONFIG_README.md  NOISE_FEATURES.md  PERFORMANCE_DIAGNOSTICS.md  __init__.py  config.py  config.yaml  config_example.py  control_input_noise_example.py  csv_loader_example.py  estimators.py  noise_example.py  noise_model_comparison.py  odometry_comparison_example.py  performance_diagnostics.py  pure_pursuit.py  pure_pursuit_examples.py  trajectory.py  trajectory_example.py  vehicle_model.py  vehicle_model_example.py  vehicle_state.py
PathTracking/CubicSpline/: cubic_spline_planner.py
PathTracking/cgmres_nmpc/: __init__.py
PathTracking/examples/: csv_loader_example.py  estimator_example.py  logger_test.py  noise_model_comparison.py  odometry_comparison_example.py  pure_pursuit_examples.py  se2_usage_example.py  segmented_ramp_down_example.py  simple_noise_example.py  vehicle_model_example.py
PathTracking/lqr_speed_steer_control/: __init__.py  lqr_speed_steer_control.py
PathTracking/lqr_steer_control/: README.md  compare_lqr_controllers.py  continuous_lqr_steer_control.py  lqr_steer_control.py
PathTracking/model_predictive_speed_and_steer_control/: __init__.py  array_sizes_explanation.md  model_predictive_speed_and_steer_control.py
PathTracking/move_to_pose/: move_to_pose.py
astar_cpp/: CMakeLists.txt  Makefile  PROJECT_SUMMARY.md  README.md  build.sh  debug_obstacles.py  debug_path.py  hybrid_astar_cpp.pyi  pyproject.toml  python_demo.py  requirements.txt  setup.py  test_bindings.py
astar_cpp/examples/: demo.cpp  python_demo.py
astar_cpp/include/: hybrid_astar.hpp
astar_cpp/python/: pybind_module.cpp
astar_cpp/src/: hybrid_astar.cpp
astar_cpp/tests/: test_main.cpp  test_python_bindings.py
astar_project/: FOXGLOVE_SUMMARY.md  FOXGLOVE_UPDATE_SUMMARY.md  PROJECT_SUMMARY.md  README.rst  final_test.py  foxglove_demo.py  pyproject.toml  quick_demo.py  simple_smooth_test.py  test_algorithm.py  test_foxglove_integration.py  test_smooth_visualization.py  test_steer_discretization.py
astar_project/astar_project/: FOXGLOVE_GUIDE.md  FOXGLOVE_README.md  README_separation.md  demo.py  demo_separated.py  foxglove_demo.py  foxglove_visualizer.py  hybrid_astar.py  hybrid_astar_clean.py  hybrid_astar_original.py  proto_helper.py  test_separation.py  test_simple.py  visualizer.py
astar_project/examples/: advanced_examples.py  demo.py  path_data_demo.py  test_visualizer_update.py
astar_project/tests/: test_astar_project.py
car_sim/: README.md  __init__.py  example_simulation.py  vehicle_dynamics.py  visualization.py
dubins_curve/: README.md  pyproject.toml
dubins_curve/dubins_curve/: __init__.py  dubins.py  types.py
dubins_curve/examples/: __init__.py  basic_example.py
dubins_curve/tests/: __init__.py  test_dubins.py
hybrid_astar_core/: CMakeLists.txt  README.md  build.sh  pyproject.toml
hybrid_astar_core/cmake/: hybrid_astar_core_config.cmake.in
hybrid_astar_core/examples/: CMakeLists.txt  collision_detector_example.cpp  demo.cpp  demo_simple.cpp
hybrid_astar_core/include/: vehicle_model.hpp
hybrid_astar_core/src/: collision_detector.cpp  common_types.cpp  vehicle_model.cpp
hybrid_astar_core/tests/: CMakeLists.txt  test_collision_detector.cpp  test_common_types.cpp  test_vehicle_model.cpp
hybrid_astar_cpp/: CMakeLists.txt  HybridAStarConfig.cmake.in  README.md
hybrid_astar_cpp/examples/: CMakeLists.txt  advanced_demo.cpp  python_demo.py
hybrid_astar_cpp/include/: hybrid_astar.hpp
hybrid_astar_cpp/tests/: CMakeLists.txt  test_main.cpp
hybrid_astar_ecal/: CMakeLists.txt  CMakeLists_new.txt  CMakeLists_original.txt  COLLISION_DETECTION.md  CONVERSION_SUMMARY.md  MIGRATION_GUIDE.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  README.md  README_new.md  README_original.md  SCENE_UPDATE_VISUALIZATION.md  build.sh  package.json  setup.sh  test.sh  test_new_cmake.sh
hybrid_astar_ecal/examples/: CMakeLists.txt  demo.cpp  ecal_demo.cpp  forward_trajectory_visualization_demo.cpp  integrated_planner_demo.cpp  scene_update_visualization_example.cpp  simple_demo.cpp  timing_demo.cpp
hybrid_astar_ecal/include/: collision_detector.hpp  common_types.hpp  hybrid_astar.hpp  obstacle_map.hpp  visualization_publisher.hpp
hybrid_astar_ecal/proto/: CMakeLists.txt  hybrid_astar.proto
hybrid_astar_ecal/proto/foxglove/: CameraCalibration.proto  Grid.proto  LocationFix.proto  MarkerArray.proto  Path.proto  Time.proto
hybrid_astar_ecal/src/: hybrid_astar.cpp  obstacle_map.cpp  visualization_publisher.cpp
pure_python_dubins/: README.md  __init__.py  setup.py  test_basic.py
pydubins/: setup.py
stanley_controller/: README.md  __init__.py  simulation.py  stanley_controller.py  vehicle_dynamics.py  visualization.py
test_ws/: pyproject.toml  t1.py  t2.py
(+71 files in other folders)
