[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "path-tracking"
version = "0.1.0"
description = "A comprehensive Python library for path tracking and vehicle control algorithms"
authors = [
    {name = "Path Tracking Contributors"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["robotics", "path-tracking", "control", "vehicle", "navigation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0", 
    "matplotlib>=3.3.0",
    "cvxpy>=1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["PathTracking"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/path_tracking"
Repository = "https://github.com/yourusername/path_tracking"
Documentation = "https://github.com/yourusername/path_tracking/blob/main/README.md"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=PathTracking --cov-report=html --cov-report=term-missing" 