[build-system]
requires = ["pybind11>=2.6.0", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid_astar_cpp"
version = "1.0.0"
description = "Hybrid A* Path Planning Algorithm - C++ implementation with Python bindings"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Path Tracking Team", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20.0",
    "pybind11>=2.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-benchmark",
]
examples = [
    "matplotlib",
    "numpy",
]
dev = [
    "black",
    "isort",
    "flake8",
    "pytest",
    "pytest-benchmark",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/sunsetzks/path_tracking"
Repository = "https://github.com/sunsetzks/path_tracking"
Issues = "https://github.com/sunsetzks/path_tracking/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hybrid_astar_cpp*"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
